chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

.hero {
  margin: 10px auto;
  position: relative;
  border: 1px solid rgba(0,0,0,.1);
}

.hero img {
  width: 98%;
  height: auto;
  object-fit: cover;
}

.herolabel {
  position: absolute;
  color: #ffffff;
  background-color: #00000034;
  top: 30px;
  left: 30px;
  border: 1px solid rgba(255, 0, 0, 0.372);
  padding: 1.5rem;
  box-shadow: 0 0 3rem #fff;
}

.herolabel span {
  margin: 0;
  padding: .25rem;
  font-weight: 700;
  font-size: 1rem;
}

body {
    font-family: "roboto";
    text-align: center;
}

.close-button {
  position: absolute;
  top: 5px;
  right: 10px;
  background-color: #cccccc60;
  border: none;
  color: black;
  padding: 2px 7px;
  font-size: 13px;
  cursor: pointer;
}

#mode {
	position: absolute;
	top: 1rem;
	right: 1rem;
	font-size: 3rem;
	cursor: pointer;
	font-size: 2rem;
  color: white;
}

.grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
	grid-gap: 5px;
	align-items: center;
}

.grid section {
	text-align: center;
}

.grid img {
	border: 1px solid #fff;
	box-shadow: 0 0 10px #333;
}

.grid section > * {
	margin: 0.5rem;
}

.list {
	display: flex;
	flex-direction: column;
}

.list section {
	display: grid;
	grid-template-columns: 2fr 1fr 1fr 1fr;
	margin: 0;
	padding: 1rem;
}

.list section img {
	display: none; /* smaller viewports only */
}

.list section h3 {
	font-size: 1rem;
	font-family: Roboto, Helvetica, sans-serif;
}

/*Current Event*
section.breaking-news-container button {
  background-color: rgb(255, 255, 255);
  color: rgb(255, 254, 253);
}
section.breaking-news-container button:hover {
  background-color: rgb(232, 232, 232);
  color: rgb(255, 254, 253);
}
section.breaking-news-container button:active {
  background-color: rgb(192, 192, 192);
  color: rgb(255, 254, 253);
}
section.breaking-news-container button:visited {
  background-color: rgba(255, 255, 255, 0.785);
  color: rgb(255, 254, 253);
}
section.breaking-news-container button:visited:hover {
  background-color: rgba(235, 235, 235, 0.785);
  color: rgb(255, 254, 253);
}

/*Call to action Button*/
section button {
    background-color: rgb(147, 39, 0);
    color: rgb(255, 254, 253);
    font-weight: bold;
    padding: 20px;
    margin: 10px;
}

section button:hover {
    background-color: rgb(255, 90, 30);
    color: rgb(255, 255, 253);
    font-weight: bolder;
}
section button:active {
    background-color: orange;
    color: white;
    font-weight: bolder;
}
section button:visited {
    background-color: rgba(255, 90, 30, 0.24);
    color: rgba(255, 252, 247, 0.24);
    font-weight: bolder;
}
section button:visited:hover {
    background-color: rgba(255, 166, 0, 0.5);
    color: rgb(255, 255, 255, 0.5);
    font-weight: bolder;
}

header, footer {
	background-color: rgb(0, 25, 148);
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 20px;
	border: 1px solid rgba(255, 255, 255, 0.1);
}

img {
    height: 100px;
    width: 130px;
}

h1 {
    font-size: 24px;
    color: white;
}

/* small view navigation */
#menu {
	font-size: 1.5rem;
	border: 1px solid rgba(0,0,0,.3);
	padding: 3px 7px 6px;
	background-color: #eee;
	color: #000;
 	position: absolute;
    top: .50em;
    right: .50em;
}

#menu::before {
	content: "☰";
}

#menu.open::before {
	content: "X";
    font-family: "roboto";
}
aside {
  display: block;
}

.navigation {
	display: flex;
	flex-direction: column;
	list-style: none;
	background-color: #000000;
	color: #fff;
}

.navigation a {
	display: none;
	padding: 1rem;
	text-align: center;
	text-decoration: none;
	color: #fff;
}
.navigation a:hover, section a:hover {
	font-weight: 700;
    font-size: larger;
    
    color: #aef4ff;
}

/* when the button is clicked - the open class is toggled (added/removed) */
.open a {
	display: block;
}

.active::before {
	content: "📍";  /* just a wayfinding symbol for the user */
}

.stuff {
	margin: .5em;
	border: 1px solid rgba(0,0,0,.1);
	background-color: #bed;
	max-width: 580px;
	height: 100vh;
	
}

nav {
    display: block;
    color: white;
    background-color: #000;
    padding: 5px;
}
section.card p, h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
    margin: 0;
    font-size: 20px;
}

nav a {
    display: block;
    text-align: center;
}
nav a:hover, section a:hover {
	text-decoration:underline;
    color: red;
}
section.card h2::before {
    content: "✨";
}

section a, nav a {
    color: rgb(255, 255, 255);
    padding: 5px;
}

a:visited {
    text-decoration: none;
    color: rgb(251, 255, 0);
}

main {
    color: #ffffff;
    background: #3d2cb9;
    padding: 10px;
}

main section.card {
    border: 20px;
    padding: 1.5px;
    padding-top: 15px;
    padding-bottom: 15px;
    margin: 23px;
    background-color: #00000034;
}
section.logo img {
  width: 300px;
  height: 300px;
}
p.span {
  color: red;
}

footer {
    display: inline-block;
    color: #aef4ff;
    padding: 20px;

}
footer p {
    border: #000 5px;
    margin: 15px;
}

/*Current Event*/
section button div {
  background-color: white;
}

/*Calender*/
.main-div {
  border: 2px solid #3231315c;
  width: 250px;
  top: 50px;
  border-radius: 20px;
  align-items: center;
  justify-content: space-evenly;
  padding: 0;
  box-shadow: 0px 0px 13px 3px #00000075;
  left: 40%;
  margin: 0;
  background: #e0dcdca8;
}

#date {
  font-size: 10em;
  margin: 0;
  padding: 0;
}

.top-div ul {
  display: flex;
  padding: 0;
}
.top-div ul li {
  list-style-type: circle;
  width: 15px;
  height: 60px;
  border-radius: 10px;
  background-image: radial-gradient(white 30%, #000000e3 40%, #aca9a9ad 70%);
  margin: 0px 12px;
  box-shadow: 0px 4px 3px 0px #000;
}
.top-div {
  top: -50px;
}
.sub-div {
  align-items: center;
  width: 100%;
  background: #484848;
  border-radius: 17px 17px 0 0;
}
.year-div {
  font-size: 30px;
  margin-top: 30px;
  padding: 10px 0 5px 0;
  align-items: center;
}
#year {
  font-size: 20px;
}

.date-div {
  flex-direction: column;
  align-items: center;
  background-color: #ffffff;
  color: #000;
}
#day {
  padding: 0;
  margin: 0;
  bottom: 6px;
  font-size: 20px;
  color: #000;
}

/*Weather*/
#weather img {
    max-width: 100%;
    background-color: rgba(26, 190, 255, 0.491);
  }
  #weather {
    width: 90%;
    max-width: 300px;
    text-align: center;
    padding: 35px 30px;
    margin: 30px auto 0;
    border-radius: 20px;
    color: #fff;
    background: linear-gradient(120deg, #3700fe, #55499c, #908ab1);
  }
  #weather p {
    font-size: 20px;
    font-weight: 500;
    padding-bottom: 10px;
  }
  #weather ul {
    font-size: 15px;
    font-weight: 400;
  }

/*Spotlight 1*/
section div.banner {
  -moz-transform: scale(1);
  -webkit-transform: scale(1);
  transform: scale(1);
  transition: all .3s ease-in-out;
}
section div.banner:hover {
  -webkit-transform: scale(1.04);
  -moz-transform: scale(1.04);
  -o-transform: scale(1.04);
  -ms-transform: scale(1.04);
  transform: scale(1.04);
}

/*Spotlight 2*/
section button.adtwo {
  background-color: rgb(46, 54, 139);
  width: 50%;
  height: 50%;
}
section button.adtwo:hover {
  background-color: rgb(30, 101, 255);
  font-weight: bolder;
}
section button.adtwo:active {
  background-color: rgb(102, 0, 255);
  color: white;
  font-weight: bolder;
}
section button.adtwo:visited {
  background-color: rgba(255, 90, 30, 0.24);
  color: rgba(255, 252, 247, 0.24);
  font-weight: bolder;
}
section button.adtwo:visited:hover {
  background-color: rgba(255, 166, 0, 0.5);
  color: rgb(255, 255, 255, 0.5);
  font-weight: bolder;
}
/*Spotlight 3*/
section div.ad-banner img {
  width: 50%;
  height: 50%;
}
section div.ad-banner {
  -moz-transform: scale(1);
  -webkit-transform: scale(1);
  transform: scale(1);
  opacity: 100%;
  transition: all .3s ease-in-out;
}

section div.ad-banner:hover {
  opacity: 75%;
  -webkit-transform: scale(1.05);
  -moz-transform: scale(1.05);
  -o-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

section #members {
  display: grid;
  padding: 20px;
  grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
	grid-gap: 20px;
	align-items: center;
}

#members h3, #members h4, #members h5{
  background-color: #0000003e;
  margin-left: auto;
  margin-right: auto;
  margin-top: 10px;
  padding: 10px;
  width: auto;
  max-width: 400px;
  font-size: smaller;
}

#members h2 {
  background-color: #0000003e;
  margin-left: auto;
  margin-right: auto;
  font-family: "Roboto";
  font-weight: bolder;
  font-size: larger;
  font-style: italic;
  margin-top: 50px;
  padding: 10px;
  width: auto;
  max-width: 400px;
}

#members img {
  
  margin-left: auto;
  margin-right: auto;
  padding: 5px;
  width: auto;
  max-width: 325px;
  box-shadow: 0 0 30px #777;
  height: 200px;
  border: 1px solid #333;
}

/*----------- FORM --------------*/
form {
	background-color: rgb(255, 255, 255);
	color: #000;
}
form .top, form div, form .sbs {
  text-align: left;
}
form a {
  background-color: #000000;
}
form h2, form h3, form h4, form h5 {
  font-size: 30px;
  background-color: #000000e6;
}
form h1 {
  color: #000;
}
form h2 {
  color: white;
}
form h3 {
  color: rgb(165, 99, 42);
}
form h4 {
  color: silver;
}
form h5 {
  color: gold;
}
textarea {
  background: #0000000f;
  width: 100%;
  height: 200px;
  padding: 10px;
	margin-bottom: 10px;
	border: thin;
	font-size: 1.1rem;
}

form .ms {
  font-size: .45rem;
  color: #9c2c13;
}

form fieldset {
  margin: 2rem 0;
  border: 1px solid #445ba9;
  border-radius: 10px;
  padding: .5rem 2%;
}

form legend {
  color: #000000;
  margin: 0 1rem;
  padding: 0 .5rem;
}

form label.top, form div {
  display: block;
  padding-top: 1rem;
  color: #9c2c13;
  font-size: .8rem;
}

form label.top input, form label.top select {
  -webkit-appearance: none;
  display: block;
  font-size: 1rem;
  border: solid 1px #999;
  border-radius: 4px;
  padding: .75rem;
  color: #555;
  width: 100%;
  max-width: 20rem;
  background-color: rgba(0,0,0,0.1);
}

form label.sbs {
  display: block;
  padding: .75rem;
  color: #555;
}

form input.submitBtn {
  border: none;
  background-color: #9c2c13;
  color: white;
  border-radius: 1rem;
  padding: .75rem 1.5rem;
  margin: 0 0 2rem 2%;
  width: 96%;
  max-width: 20rem;
}
form input.submitBtn:hover {
  border: none;
  background-color: #d13216;
  color: white;
  border-radius: 1rem;
  padding: .75rem 1.5rem;
  margin: 0 0 2rem 2%;
  width: 96%;
  max-width: 20rem;
}
form input.submitBtn:active {
  border: none;
  background-color: #f5360b;
  color: white;
  border-radius: 1rem;
  padding: .75rem 1.5rem;
  margin: 0 0 2rem 2%;
  width: 96%;
  max-width: 20rem;
}

form label.top input:required {
  border-left: red solid 6px;
}

form label.top input:required:valid {
  border-left: rgb(0, 217, 0) solid 6px;
}
/*Banner*/
#banner {
  background-color: #f4f4f4;
  color: #000;
  text-align: center;
  padding: 22px;
  font-size: 18px;
  font-family: Arial, sans-serif;
  position: relative;
}

